Added "add to playlist" action

--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -70,7 +70,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Github"
+            "value" : "GitHub"
           }
         },
         "en" : {
