--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -836,6 +836,22 @@
         }
       }
     },
+    "play" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Wiedergeben"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Play"
+          }
+        }
+      }
+    },
     "playback.back" : {
       "localizations" : {
         "de" : {
