Added artists to search page

--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -1454,6 +1454,22 @@
         }
       }
     },
+    "section.artists" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Künstler"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Artists"
+          }
+        }
+      }
+    },
     "section.playlists" : {
       "localizations" : {
         "de" : {
