feat: lazyload and search artists as well
Although this amount is usually smaller than albums and tracks, just in case

--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -1375,6 +1375,17 @@
         }
       }
     },
+    "search.artists" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Search Artists"
+          }
+        }
+      }
+    },
     "search.downloaded" : {
       "comment" : "Search the downloaded content",
       "localizations" : {
