--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -196,6 +196,38 @@
         }
       }
     },
+    "account.spotlight.disabled" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Spotlight deaktiviert"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Spotlight disabled"
+          }
+        }
+      }
+    },
+    "account.spotlight.disabled.text" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Aufgrund der Größe deiner Bibliothek wurde die Spotlight-Integartion temporär angehalten."
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Due to the huge size of your library the spotlight integration has be temporarily disabled"
+          }
+        }
+      }
+    },
     "account.support" : {
       "localizations" : {
         "de" : {
@@ -873,6 +905,12 @@
     },
     "placeholder" : {
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Platzhalter"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
@@ -1387,6 +1425,12 @@
     },
     "search.artists" : {
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Künstler suchen"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
