Added SearchForMediaIntent, added Playlists to Spotlight index, added Shortcuts, playback info, donations & handoff are working now
I would call this the "Spotlight update", you can now search for artists & albums, get metadata provided by Apple and open them in AmpFin. All of this is really cool :)

--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -1167,6 +1167,9 @@
         }
       }
     },
+    "playlist.view" : {
+
+    },
     "queue.history" : {
       "localizations" : {
         "de" : {
