Fix iPadOS crash

--- a/Multiplatform/Utility/Intents/de.lproj/Intents.strings
+++ b/Multiplatform/Utility/Intents/de.lproj/Intents.strings
@@ -6,13 +6,13 @@
 
 "ErAaNp" = "Wiederholungsmodus";
 
-"G3J6fP" = "Spiele Musik";
+"G3J6fP" = "Spiele Medien";
 
 "H25xHi" = "Setzte ${mediaContainer} fort";
 
 "KcCcQu" = "Spiele ${mediaItems}";
 
-"LdrEPN" = "Eine Anfrage Musik zu spielen";
+"LdrEPN" = "Eine Anfrage Medien zu spielen";
 
 "MbU5ep" = "Zufällige Wiedergabe von ${mediaItems}";
 
