Fix now playing view not opening in certain conditions (https://github.com/rasmuslos/AmpFin/commit/428d860ada2af5d0b8c94959909e111b90965d25#commitcomment-142677120)

--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -1006,7 +1006,20 @@
       }
     },
     "output" : {
-
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ausgang"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Output"
+          }
+        }
+      }
     },
     "placeholder" : {
       "localizations" : {
