Added double tap gestures to the tab bar

--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -2071,6 +2071,9 @@
         }
       }
     },
+    "tab.library" : {
+
+    },
     "tab.search" : {
       "localizations" : {
         "de" : {
